objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Am_i_workorder_owner_manager__c</fullName>
        <description>Service Management : Adding the field for reporting purpose. Managers/Team Leads wants to see what their team&apos;s workorders are. My Teams cases look for role hierarchies and cant be implemented due to a) Different team members having same role but different team leads (TLs will see other team&apos;s work orders which they don&apos;t want to)  b) Frequently changing teams</description>
        <formula>IF(OR(Owner:User.ManagerId = $User.Id,Owner:User.Manager.ManagerId = $User.Id,Owner:User.Manager.Manager.ManagerId = $User.Id),&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am i workorder owner manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Date__c</fullName>
        <label>Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Case 00654187 - Service Mgmt Phase 2, First Release (Rel 6.0) - Arokia Nathan</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Action_Completed__c</fullName>
        <description>Case 00680997 - Need way to handle Unauthorized RMA Materials process - Arokia Nathan</description>
        <label>Date Action Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <formula>IF(
AND(TEXT(Status) = &apos;Closed&apos;, NOT(ISBLANK(Completed_Date__c))), 
Completed_Date__c - DATEVALUE(CreatedDate),
TODAY() - DATEVALUE(CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Case 00654187 - Service Mgmt Phase 2, First Release (Rel 6.0) - Arokia Nathan</description>
        <formula>IF(NOT(ISBLANK(Owner:User.Id)), Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName,
IF(NOT(ISBLANK(Owner:Queue.Id)), Owner:Queue.Name, null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case 00680997 - Need way to handle Unauthorized RMA Materials process - Arokia Nathan</description>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <description>Case 00680997 - Need way to handle Unauthorized RMA Materials process - Arokia Nathan</description>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>Missing RMA Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excess / Unauthorized Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Serial Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Damage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Case# 00654187 - Service Mgmt Phase 2, First Release (Rel 6.0) - Arokia Nathan</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <description>Case# 00654187 - Service Mgmt Phase 2, First Release (Rel 6.0) - Arokia Nathan</description>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <description>Case 00680997 - Need way to handle Unauthorized RMA Materials process - Arokia Nathan</description>
        <label>Response Code</label>
        <picklist>
            <picklistValues>
                <fullName>Receive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold for Pickup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Comments__c</fullName>
        <label>Response Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order_Created_By_Me__c</fullName>
        <description>Case# 00654187 - Service Mgmt Phase 2, First Release (Rel 6.0) - Arokia Nathan</description>
        <formula>IF(CreatedById = $User.Id , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Created By Me</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Service_Requests_I_Received</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>Requested_Date__c</columns>
        <columns>CreatedBy</columns>
        <columns>CreatedDate</columns>
        <filterScope>Mine</filterScope>
        <label>All Service Requests I Received</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Service_Requests_I_Sent</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>Owner_Name__c</columns>
        <columns>CreatedDate</columns>
        <columns>Requested_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Created_By_Me__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All Service Requests I Sent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cash_Management_Queue_WorkOrder</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <columns>Subject</columns>
        <columns>Status</columns>
        <columns>Completed_Date__c</columns>
        <columns>Owner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner</field>
            <operation>equals</operation>
            <value>vcar</value>
        </filters>
        <filters>
            <field>Owner</field>
            <operation>equals</operation>
            <value>kclu</value>
        </filters>
        <filters>
            <field>Owner</field>
            <operation>equals</operation>
            <value>rtul</value>
        </filters>
        <filters>
            <field>Owner</field>
            <operation>equals</operation>
            <value>blig</value>
        </filters>
        <label>Cash Management Queue</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Service_Requests_I_Sent</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>Requested_Date__c</columns>
        <columns>CreatedBy</columns>
        <columns>CreatedDate</columns>
        <columns>Response_Code__c</columns>
        <columns>RMA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Created_By_Me__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Service Requests I Sent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Commercial_Marketing_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Commercial Marketing</label>
        <queue>Commercial_Marketing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Management</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>FPO Case</value>
        </filters>
        <label>Cash Management</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Management_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Management</label>
        <queue>Contract_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_Inbound_Queue_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Resolution Specialist Queue</label>
        <queue>Core_Inbound_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Design_Support_Queue_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Residential Performance SR Queue</label>
        <queue>Design_Support_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GBFS_NA_TM_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>@GBFS_NA_TM</label>
        <queue>GBFS_NA_TM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HomeSale_Queue_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>HomeSale Queue</label>
        <queue>HomeSale_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Management_Queue_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead Management Queue</label>
        <queue>Lead_Management_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Loss_Mitigation_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Loss Mitigation</label>
        <queue>Loss_Mitigation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_ROW_Queue_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Marketing ROW Queue</label>
        <queue>Marketing_ROW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Support_Queue_WorkOrder</fullName>
        <filterScope>Queue</filterScope>
        <label>Marketing Support Queue</label>
        <queue>Marketing_Support_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Service_Request</fullName>
        <active>true</active>
        <description>Service Request</description>
        <label>Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unauthorized_RMA</fullName>
        <active>true</active>
        <description>Unauthorized RMA Materials Service Request</description>
        <label>Unauthorized RMA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Response_Code_required</fullName>
        <active>true</active>
        <description>Case 00680997 - Need way to handle Unauthorized RMA Materials process - Arokia Nathan</description>
        <errorConditionFormula>AND (
 RecordType.DeveloperName = &apos;Unauthorized_RMA&apos;,
 ISPICKVAL(Status, &apos;Closed&apos;), 
 ISBLANK(TEXT(Response_Code__c)) 
)</errorConditionFormula>
        <errorDisplayField>Response_Code__c</errorDisplayField>
        <errorMessage>If Status is set to &quot;Closed&quot;, then &quot;Response Code&quot; must be filled in.</errorMessage>
    </validationRules>
</CustomObject>